# OpenCV-Card-Detection-in-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  VideoStream.cpp  VideoStream.h  cards.cpp  cards.h  constants.cpp  constants.h  main.cpp  rankSuitIsolator.cpp  rankSuitIsolator.h
reference/: hmhmhm.cpp  hmhmhm.h  oldThings.cpp
